z-index issues

--- a/css/application/architecture.less
+++ b/css/application/architecture.less
@@ -10,6 +10,7 @@ body.ventu-application {
         top: 0;
         width: 100%;
         height: 100%;
+        z-index: -10000000000000000;
     }
 
     #ventu-filters {
@@ -22,12 +23,14 @@ body.ventu-application {
         position: absolute;
         right: 50px;
         bottom: 0;
+        z-index: 10000000000000000;
     }
 
     #ventu-stack {
         position: absolute;
         right: 120px;
         top: 124px;
+        z-index: 10000000000000000;
     }
 }
 
