--- a/css/shared/card.less
+++ b/css/shared/card.less
@@ -200,19 +200,19 @@
 
 @keyframes float-shade {
     0%{
-        transform: translateX(50px) translateY(50px) translateZ(-50px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(1.2,1.2);
+        transform: translateX(50px) translateY(50px) translateZ(-509px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(1.2,1.2);
     }
 
     25% {
-        transform: translateX(140px) translateY(50px) translateZ(-50px) rotateX(12.5deg) rotateY(0deg) rotateZ(0deg) scale(1.2,1.2);
+        transform: translateX(140px) translateY(50px) translateZ(-509px) rotateX(12.5deg) rotateY(0deg) rotateZ(0deg) scale(1.2,1.2);
     }
 
     75% {
-        transform: translateX(-40px) translateY(50px) translateZ(-50px) rotateX(12.5deg) rotateY(0deg) rotateZ(0deg) scale(1.2,1.2);
+        transform: translateX(-40px) translateY(50px) translateZ(-509px) rotateX(12.5deg) rotateY(0deg) rotateZ(0deg) scale(1.2,1.2);
     }
 
     100% {
-        transform: translateX(50px) translateY(50px) translateZ(-50px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(1.2,1.2);
+        transform: translateX(50px) translateY(50px) translateZ(-509px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(1.2,1.2);
     }
 }
 
