--- a/css/style.css
+++ b/css/style.css
@@ -563,16 +563,16 @@ body .ventu-pagewrap {
 }
 @keyframes float-shade {
   0% {
-    transform: translateX(50px) translateY(50px) translateZ(-50px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(1.2, 1.2);
+    transform: translateX(50px) translateY(50px) translateZ(-509px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(1.2, 1.2);
   }
   25% {
-    transform: translateX(140px) translateY(50px) translateZ(-50px) rotateX(12.5deg) rotateY(0deg) rotateZ(0deg) scale(1.2, 1.2);
+    transform: translateX(140px) translateY(50px) translateZ(-509px) rotateX(12.5deg) rotateY(0deg) rotateZ(0deg) scale(1.2, 1.2);
   }
   75% {
-    transform: translateX(-40px) translateY(50px) translateZ(-50px) rotateX(12.5deg) rotateY(0deg) rotateZ(0deg) scale(1.2, 1.2);
+    transform: translateX(-40px) translateY(50px) translateZ(-509px) rotateX(12.5deg) rotateY(0deg) rotateZ(0deg) scale(1.2, 1.2);
   }
   100% {
-    transform: translateX(50px) translateY(50px) translateZ(-50px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(1.2, 1.2);
+    transform: translateX(50px) translateY(50px) translateZ(-509px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(1.2, 1.2);
   }
 }
 .ventu-overlay .ventu-form h2 {
@@ -1140,6 +1140,9 @@ body.ventu-application #ventu-canvas {
   top: 0;
   width: 100%;
   height: 100%;
+  z-index: -10000000000000000;
+  -webkit-backface-visibility: hidden;
+  -webkit-transform: translateZ(0);
 }
 body.ventu-application #ventu-filters {
   position: absolute;
@@ -1150,11 +1153,13 @@ body.ventu-application #ventu-bottom-bar {
   position: absolute;
   right: 50px;
   bottom: 0;
+  z-index: 10000000000000000;
 }
 body.ventu-application #ventu-stack {
   position: absolute;
   right: 120px;
   top: 124px;
+  z-index: 10000000000000000;
 }
 .ventu-filter-box {
   display: inline-block;
